--- a/test.html
+++ b/test.html
@@ -7,23 +7,11 @@
 </head>
 <body>
 		<h1>Index of: /</h1>
-		</pre><hr/>
-        <p><a href="index.php">index.php</a></p>
-		<p><a href="./">./</a></p>
-		<p><a href="Mainer.cpp">Mainer.cpp</a></p>
-		<p><a href=".gitignore">.gitignore</a></p>
-		<p><a href=".vscode/">.vscode/</a></p>
-		<p><a href="includes/">includes/</a></p>
-		<p><a href="Makefile">Makefile</a></p>
-		<p><a href="test.go">test.go</a></p>
-		<p><a href="../">../</a></p>
-		<p><a href="server/">server/</a></p>
-		<p><a href="test.cpp">test.cpp</a></p>
-		<p><a href=".git/">.git/</a></p>
-		<p><a href="test.html">test.html</a></p>
-		<p><a href="parsing/">parsing/</a></p>
-		<p><a href="a.out">a.out</a></p>
-		<p><a href="README.md">README.md</a></p>
-		</pre><hr />
+		<hr/>
+        <p><a href="./">./</p></a>
+		<p><a href="../">../</p></a>
+		<p><a href="file.html">file.html</p></a>
+		<p><a href="test">test</p></a>
+		
 </body>
 </html>
