--- a/test.html
+++ b/test.html
@@ -10,8 +10,12 @@
 		<hr/>
         <p><a href="./">./</p></a>
 		<p><a href="../">../</p></a>
+		<p><a href="dir/">dir/</p></a>
+		<p><a href="error_page/">error_page/</p></a>
 		<p><a href="file.html">file.html</p></a>
-		<p><a href="test">test</p></a>
+		<p><a href="mydir/">mydir/</p></a>
+		<p><a href="upload/">upload/</p></a>
 		
 </body>
 </html>
+
