--- a/website/error_page/404.html
+++ b/website/error_page/404.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>404 Not Found</title>
 </head>
 <body>
-	Error
+	<center>
+		<p>404 Not Found</p>
+	</center>
 </body>
 </html>
